fix(blog): updated styles on blog for dark mode

--- a/my-nextjs-site/app/blog/[blogId]/style.module.css
+++ b/my-nextjs-site/app/blog/[blogId]/style.module.css
@@ -5,7 +5,13 @@
 
 @media (prefers-color-scheme: dark) {
   .content {
-    color: #F7F7F7;
+    color: #f7f7f7;
+  }
+  .content strong {
+    color: #a7aec7;
+  }
+  .content {
+    color: #a7aec7;
   }
 }
 
